# Strata

./: .gitignore  Cargo.toml  README.md  build-windows.bat  repositories.toml
core-engine/: Cargo.toml
core-engine/src/: audio.rs  depth.rs  inpaint.rs  lib.rs  manifest.rs  parallax.rs  pipeline.rs  preprocessor.rs  segment.rs  shadertoy_import.rs  thumbnail.rs  uniform.rs  upscale.rs  video.rs
core-engine/src/resources/: models.toml  parallax_body.glsl  parallax_layered_body.glsl  presets.toml
core-engine/tests/: assemble_library.rs  parallax.rs  pipeline_audit.rs  quality_scale.rs
platform-shells/strata-desktop/: Cargo.toml  build.rs
platform-shells/strata-desktop/src/: config.rs  library_sync.rs  main.rs  parallax.rs  video_decode.rs
platform-shells/strata-desktop/src/controller/: mod.rs
platform-shells/strata-desktop/src/platform/: mod.rs  renderer.rs  windows.rs
platform-shells/strata-desktop/ui/: icons.slint  main.slint
